# todo-list-cli

./: Cargo.toml  README.md  config.toml  package.sh
src/: config.rs  main.rs  models.rs  task.rs
